--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js",
-    "start-server":"node app.js"
+    "start-server": "node app.js"
   },
   "author": "JITHIN",
   "license": "ISC",
@@ -14,6 +14,7 @@
     "nodemon": "^3.1.9"
   },
   "dependencies": {
+    "body-parser": "^1.20.3",
     "express": "^4.21.2"
   }
 }
