--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "1.0.0",
   "description": "Complete Node.js Guide",
   "main": "app.js",
+  "engines": {
+    "node": "21.7.3"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js",
-    "start-server": "node app.js"
+    "start": "NODE_ENV=production MONGO_USER=jithinraja4 MONGO_PASSWORD=Jithin%4099 MONGO_DEFAULT_DATABASE=shops STRIPE_KEY=sk_test_T8OE02SHDZWLwk4TYtrWlsat node app.js",
+    "start-server": "node app.js",
+    "start:dev": "nodemon app.js"
   },
-  "author": "Maximilian Schwarzmüller",
+  "author": "JITHIN",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^1.18.3"
@@ -16,6 +20,7 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.18.3",
+    "compression": "^1.8.0",
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^2.0.3",
     "csurf": "^1.11.0",
@@ -24,8 +29,10 @@
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "express-validator": "^7.2.1",
+    "helmet": "^8.0.0",
     "mongodb": "^3.1.6",
     "mongoose": "^5.2.17",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^1.6.1",
     "nodemailer": "^6.10.0",
